# v4r

apps/ObjectGroundTruthAnnotator/: main_window.cpp
cmake/: V4RFindAssimp.cmake
debug/: V4R.cbp  V4RConfig.cmake  V4RModules.cmake  cmake_uninstall.cmake  v4r_config.h  v4r_modules.h  version_string.tmp
debug/apps/ObjectGroundTruthAnnotator/: moc_main_window.cxx  moc_main_window.cxx_parameters
debug/apps/RTMT/: moc_BundleAdjustment.cxx_parameters  moc_Camera.cxx_parameters  moc_MultiSession.cxx_parameters  moc_ObjectSegmentation.cxx_parameters  moc_OctreeVoxelCentroidContainerXYZRGB.cxx_parameters  moc_StoreTrackingModel.cxx_parameters  moc_glviewer.cxx_parameters  moc_mainwindow.cxx_parameters  moc_params.cxx_parameters  moc_sensor.cxx_parameters
debug/modules/change_detection/: v4r_change_detection.cbp
debug/modules/common/: v4r_common.cbp
debug/modules/core/: v4r_core.cbp  version_string.inc
debug/modules/features/: v4r_features.cbp
debug/modules/io/: v4r_io.cbp
debug/samples/: cpp_samples.cbp
debug/unix-install/: V4RConfig.cmake
modules/ml/: CMakeLists.txt
modules/ml/src/: cnn.cpp  (+2 more)
modules/own/: CMakeLists.txt
samples/: CMakeLists.txt
samples/own/: CMakeLists.txt  alexnet_iterative_test.cpp  alexnet_iterative_test.cpp.autosave  caffe_class.cpp  caffe_esf_class.cpp  caffe_iterativ_v1.cpp  caffe_iterativ_v1.cpp.autosave  caffe_model_test.cpp  caffee_teach.cpp  cloud_generator.cpp  create_caffe_list.cpp  esf_class.cpp  esf_class_teach.cpp  esf_gen.cpp  esf_svm_class.cpp  esf_svm_teach.cpp  esf_svm_test.cpp  svm_test.cpp  test_caffe_train.cpp  test_data_gen.cpp  test_pcl_input.cpp  train_data_gen.cpp
(+21 files in other folders)
